--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.1.2",
-    "@tanstack/react-query": "^5.81.2",
+    "@hookform/resolvers": "^5.1.1",
+    "@mui/material": "^7.2.0",
+    "@tanstack/react-query": "^5.81.5",
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
-    "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "15.3.4",
     "next-intl": "^4.3.1",
@@ -26,11 +26,13 @@
     "react-countup": "^6.5.3",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.59.0",
+    "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
     "styled-components": "^6.1.19",
-    "swiper": "^11.2.8",
+    "swiper": "^11.2.10",
     "yup": "^1.6.1"
   },
   "devDependencies": {
