--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "sass": "^1.89.2",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
-    "yup": "^1.6.1"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
