--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "framer-motion": "^12.23.0",
     "js-cookie": "^3.0.5",
     "next": "15.3.4",
     "next-intl": "^4.3.1",
