--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.23.0",
     "js-cookie": "^3.0.5",
-    "next": "15.3.4",
-    "next-intl": "^4.3.1",
+    "next": "^15.3.4",
+    "next-intl": "^4.3.4",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.10",
